--- a/project-1/main.css
+++ b/project-1/main.css
@@ -1,13 +1,18 @@
 html {
+  font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+main {
+  padding-left:20px;
+  padding-right: 20px;
+}
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
-  line-height: 1.25;
+  line-height: 1.3;
   color: #111;
   text-rendering: optimizeLegibility;	
 }
@@ -28,7 +33,7 @@ p {
 }
 
 a {
-  color: ;
+  color: #d9480f;
 }
 
 img {
@@ -36,7 +41,10 @@ img {
 }
 
 .card {
-	width: 100%;
+  background-color:#e7f5ff;
+  padding: 30px;
+  margin-bottom: 20px;
+
 }
 
 @media (min-width: 48em) {
@@ -44,7 +52,11 @@ img {
 		max-width: 950px;
 		margin: 0 auto;
 	}
+  .row {
+    width: 100%;
+    display: flex;
+  }
 	.card {
-		width: 50%;
+    margin: 0 20px 20px 0;
 	}
 }
